CS3103: Cleaning the code
